cambios agregamos sitio de instagram

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>HOLA</title>
 </head>
 <body><P>
-    Este es mi sitio web sigueme en tatianamarquez makeup 
+   Hola amigos  Este es mi sitio web sigueme en tatianamarquez makeupen mi pagina de instagram.com/tatianamarquezmakeup
+
 </P>
     
 </body>
